# monorepo

./: .gitignore  README.md
data-structures/bloom-filters/: main.py
databases/vector/: vector.py
distributed-systems/consensus/2-phase-commit/: main.py
gen-ai/agents/chatbots/jarvis/: .env.example  .gitignore  README.md  pyproject.toml
gen-ai/agents/chatbots/jarvis/src/: __init__.py  config.py  main.py
gen-ai/agents/chatbots/jarvis/src/agent/: __init__.py  callbacks.py  factory.py  prompts.py
gen-ai/agents/chatbots/jarvis/src/cli/: __init__.py  repl.py
gen-ai/agents/chatbots/jarvis/src/server/: __init__.py  a2a.py
gen-ai/agents/chatbots/jarvis/src/ui/: __init__.py  colors.py  console.py  spinner.py
gen-ai/agents/chatbots/jarvis/tests/: __init__.py  conftest.py  test_config.py  test_example.py
gen-ai/agents/chatbots/jarvis/tests/test_agent/: test_callbacks.py
gen-ai/agents/chatbots/jarvis/tests/test_ui/: test_spinner.py
gen-ai/llm-tool-augmentation/: README.md  config.py  main.py  tools.py
gen-ai/mcp/todo-mcp-server/: .gitignore  CLAUDE.md  requirements.txt  setup.py
network/tcp/: 3_way_handshake.py
operating-systems/concurrency/: daemon-threads.py  livelock.py  processes-and-race-conditions.py  semaphores.py  threads-and-race-conditions.py
operating-systems/concurrency/applications/: print-alternatively.py  print-in-order.py  zero-odd-zero-even.py
operating-systems/concurrency/primitives/: barrier.py  conditions.py  deadlock.py  events.py  locks.py
security/encryption/symmetric/: aes.py  cipher.py  cool_but_weak.py  main.py  (+1 more)
(+4 files in other folders)
